--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rafalik2pl/inpost-geowidget-angular.git"
+    "url": "git+https://github.com/klewi1983/inpost-geowidget-angular.git"
   },
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
+    "@angular/animations": "^17.*",
+    "@angular/common": "^17.*",
+    "@angular/compiler": "^17.*",
+    "@angular/core": "^17.*",
+    "@angular/forms": "^17.*",
+    "@angular/platform-browser": "^17.*",
+    "@angular/platform-browser-dynamic": "^17.*",
+    "@angular/router": "^17.*",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.12",
-    "@angular/cli": "~14.2.12",
-    "@angular/compiler-cli": "^14.2.0",
+    "@angular-devkit/build-angular": "^17.*",
+    "@angular/cli": "^17.*",
+    "@angular/compiler-cli": "^17.*",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
@@ -44,7 +44,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ng-packagr": "^14.2.0",
-    "typescript": "~4.7.2"
+    "ng-packagr": "^17.*",
+    "typescript": "^5.*"
   }
 }
